CSS/style.css
img {
  max-width: 100%;
}

figure img {
  width: 100%;
  display: block;
}

a {
  color: white;
  text-decoration: none;
}

/* FIRST SECTION */
.row.main {
  height: 100vh;
}

.aside {
  background-color: #f8f9fa;
  position: fixed;
  width: 100vw;
  top: 0;
  left: 0;
  overflow: hidden;
}

.main {
  margin-top: 32px;
}

.aside-section {
  height: 49px;
  background-color: #ffffff;
}

.logo {
  width: 34px;
  aspect-ratio: 1;
  border: 2px solid black;
}

.logo-extended {
  display: none;
  color: #001632;
  font-weight: bold;
  font-size: 25px;
}

.input-group,
.input-group-text {
  border: 1px solid #e5e5e5;
  background-color: #e5e5e5;
}

.form-control {
  border: none;
  background-color: transparent;
}

.extended-menu {
  display: none;
}

.extended-menu i {
  color: #5b5858;
}

.bell {
  color: orange;
}

/* MAIN HEADER */

.main-header {
  position: fixed;
  bottom: 0;
  left: 0;
  background-image: url('../img/sidebar-bg.png');
  background-color: #051e34;
  color: white;
  width: 70px;
  height: calc(100% - 65px);
  z-index: -1;
}

.main-view {
  background-color: #f8f9fa;
}

.nav-extended {
  display: none;
  margin-left: 10px;
}

.header-nav li:hover,
.settings:hover {
  background-color: #677182;
}

/* MAIN VIEW */

.main-view {
  margin-left: 70px;
}

/* STATUS BAR */

.status-bar {
  background-color: #1b72e8;
  color: white;
}

.status-title,
.student-number {
  font-size: 30px;
}

.badge {
  background-color: #165bba;
  border-radius: 999px;
}

.add-student {
  border: 1px solid white;
  padding: 5px 10px;
  border-radius: 3px;
  font-size: 13px;
  margin-left: 15px;
}

.dropdown .btn {
  color: orange;
  border: none;
}

/* MAIN */

.card label {
  white-space: nowrap;
  min-width: 320px;
}

@media (min-width: 576px) {
}

@media (min-width: 768px) {
  .logo {
    border: none;
  }

  .status-bar {
    height: 134px;
  }

  .student-30 {
    white-space: wrap;
    max-width: 200px;
  }
}

@media (min-width: 992px) {
  .student-30 {
    white-space: wrap;
    max-width: 300px;
  }
}

@media (min-width: 1200px) {
}

@media (min-width: 1400px) {
  .extended-menu {
    display: flex;
  }

  .ext {
    display: inline;
  }

  .main-header {
    width: 150px;
  }
  .main-view {
    margin-left: 150px;
  }
}

/* DEBUG */

.debug [class^='col'] {
  border: 1px solid greenyellow;
  padding: 10px;
}

.debug .aside-section {
  border: 1px solid greenyellow;
  padding: 10px;
}

.debug .aside-section {
  border: 1px solid greenyellow;
  padding: 10px;
}

.debug .main-view {
  border: 1px solid cornflowerblue;
  padding: 10px;
}
.debug .view {
  border: 1px solid orange;
  padding: 10px;
}
.debug .card {
  border: 1px solid orange;
}

